// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test workarea should render correctly 1`] = `
<div>
  <dummy-context-menu-trigger
    holdtodisplay="-1"
    holdtodisplaymouse="-1"
    id="canvas-contextmenu"
  >
    <div
      class="mac"
      id="workarea"
    >
      <div
        id="svgcanvas"
        style="position: relative;"
      />
    </div>
  </dummy-context-menu-trigger>
  <dummy-context-menu
    id="canvas-contextmenu"
  >
    <dummy-menu-item
      disabled=""
    >
      Cut
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Copy
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Paste
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Paste in Place
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Duplicate
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled=""
    >
      Delete
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled=""
    >
      Group
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Ungroup
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled=""
    >
      Bring to Front
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Bring Forward
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Send Backward
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Send to Back
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-sub-menu
      disabled=""
      title="Move elements to:"
    >
      <dummy-menu-item
        disabled=""
      >
        Layer 1
      </dummy-menu-item>
      <dummy-menu-item>
        Layer 2
      </dummy-menu-item>
    </dummy-sub-menu>
  </dummy-context-menu>
</div>
`;

exports[`test workarea should render correctly 2`] = `
<div>
  <dummy-context-menu-trigger
    disable=""
    holdtodisplay="-1"
    holdtodisplaymouse="-1"
    id="canvas-contextmenu"
  >
    <div
      class="mac"
      id="workarea"
    >
      <div
        id="svgcanvas"
        style="position: relative;"
      />
    </div>
  </dummy-context-menu-trigger>
  <dummy-context-menu
    id="canvas-contextmenu"
  >
    <dummy-menu-item>
      Cut
    </dummy-menu-item>
    <dummy-menu-item>
      Copy
    </dummy-menu-item>
    <dummy-menu-item>
      Paste
    </dummy-menu-item>
    <dummy-menu-item>
      Paste in Place
    </dummy-menu-item>
    <dummy-menu-item>
      Duplicate
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item>
      Delete
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled=""
    >
      Group
    </dummy-menu-item>
    <dummy-menu-item
      disabled=""
    >
      Ungroup
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item>
      Bring to Front
    </dummy-menu-item>
    <dummy-menu-item>
      Bring Forward
    </dummy-menu-item>
    <dummy-menu-item>
      Send Backward
    </dummy-menu-item>
    <dummy-menu-item>
      Send to Back
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-sub-menu
      title="Move elements to:"
    >
      <dummy-menu-item
        disabled=""
      >
        Layer 1
      </dummy-menu-item>
      <dummy-menu-item>
        Layer 2
      </dummy-menu-item>
    </dummy-sub-menu>
  </dummy-context-menu>
</div>
`;
